# wyoming-whisper-speaker

./: .env.example  .gitignore  Dockerfile.cpu  Dockerfile.gpu  OPENAI_IMPLEMENTATION.md  README.md  compare.py  docker-compose.yml  docker_run.sh  label_voices.py  push-images.sh  pyproject.toml
.github/workflows/: docker-publish.yml
tests/: test_speaker_utils.py
wyoming_faster_whisper/: __init__.py  __main__.py  const.py  dispatch_handler.py  models.py  openai_transcriber.py  speaker_recognition.py  speaker_utils.py
