[project]
name = "wyoming-whisper-speaker"
version = "1.0.0"
description = "Wyoming Faster Whisper with GPU and speaker labeling"
requires-python = ">=3.11"
dependencies = [
    "wyoming>=1.8,<2",
    "faster-whisper>=1.1.0,<2",
    "numpy",
    "requests",
]

[project.scripts]
wyoming-whisper-speaker = "wyoming_faster_whisper.__main__:run"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wyoming_faster_whisper"]

[tool.pytest.ini_options]
testpaths = ["tests"]